<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/banner"
    android:theme="@style/LoginTheme">

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_title_margin_top"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/logisticsWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_text_view_def_margin_padding"
            android:layout_marginLeft="@dimen/login_text_view_def_margin_padding"
            android:text="@string/login_home_bank"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/login_title_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/loginSubtitleTitle"
        style="@style/LoginDefaultTextView"
        android:layout_marginTop="@dimen/login_subtitle_margin_top_big"
        android:text="@string/login_title"
        android:textAllCaps="true"
        android:textSize="@dimen/login_text_subhead_size"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLayout" />

    <FrameLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_email_margin_top_big"
        app:layout_constraintTop_toBottomOf="@id/loginSubtitleTitle">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/loginEmailEditText"
                style="@style/LoginEditText"
                android:hint="@string/login_hint_email"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@id/loginPasswordEditText" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/loginEmailClearBtn"
            style="@style/LoginClearButton"
            android:src="@drawable/login_email_clear_btn" />

    </FrameLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginPasswordEditText"
            style="@style/LoginEditText"
            android:hint="@string/login_hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:id="@+id/signInButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout">

        <Button
            android:id="@+id/loginSignInButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:background="@color/colorIcons"
            android:text="@string/login_sign_in_button"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/LoginProgressBar"
        android:visibility="invisible"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@id/signInButtonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/signInButtonLayout" />

    <TextView
        android:id="@+id/loginForgotPasswordTitle"
        style="@style/LoginDefaultTextView"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/login_hint_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInButtonLayout" />

    <TextView
        android:id="@+id/loginForgotPasswordButton"
        style="@style/LoginDefaultTextView"
        android:text="@string/login_forgot_password_text"
        android:textSize="@dimen/login_text_subhead_size"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginForgotPasswordTitle" />

    <Button
        android:id="@+id/loginRegisterButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:background="@color/colorPrimary"
        android:text="@string/login_register_text"
        android:textColor="@color/colorIcons"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>